--- a/styles.css
+++ b/styles.css
@@ -302,6 +302,7 @@ body {
         font-size: 9px;
         width:120px;
         height: 50px;
+        margin-left: 0;
     }
     .chap-num{
         font-size: 10px;
